[package]
name = "romy-core"
version = "0.1.0"
authors = ["catt-io <catt-io@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
documentation = "https://github.com/catt-io/romy"
repository = "https://github.com/catt-io/romy"
homepage = "http://www.romy.xyz"
description = """
A runtime for portable, archivable and deterministic video games.
"""
categories = ["games"]
keywords = ["game", "runtime"]

[dependencies]
byteorder = "1.2.7"
serde = "1.0.85"
serde_derive = "1.0.85"
bincode = "1.0.1"