[package]
name = "romy-engine"
version = "0.1.0"
authors = ["catt-io <catt-io@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
documentation = "https://github.com/catt-io/romy"
repository = "https://github.com/catt-io/romy"
homepage = "http://www.romy.xyz"
description = """
A runtime for portable, archivable and deterministic video games.
"""
categories = ["games"]
keywords = ["game", "runtime"]

[dependencies]
romy-core = "0.1.0"
image = "0.20.1"
lewton = "0.9.3"
