[package]
name = "romy-sdl"
version = "0.1.1"
authors = ["catt-io <catt-io@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
documentation = "https://github.com/catt-io/romy"
repository = "https://github.com/catt-io/romy"
homepage = "http://www.romy.xyz"
description = """
A runtime for portable, archivable and deterministic video games.
"""
categories = ["games"]
keywords = ["game", "runtime"]

[dependencies.sdl2]
version = "0.32.2"
default-features = false
features = ["bundled", "static-link"]

[dependencies]
romy-core = "0.1.0"