[package]
name = "romy-web"
version = "0.1.0"
authors = ["catt-io <catt-io@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies.web-sys]
version = "0.3.19"
features = [
    "Document",
    "Window",
    "Element",
    "HtmlElement",
    "Node",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "KeyboardEvent",
    "EventTarget",
    "HtmlDivElement",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "DragEvent",
    "Event",
    "DataTransfer", 
    "DataTransferItemList",
    "FileList",
    "Blob",
    "Url",
    "File",
    "BlobPropertyBag",
    "Location",
    "Performance",
    "AudioContext",
    "ScriptProcessorNode",
    "AudioProcessingEvent",
    "AudioNode",
    "AudioDestinationNode",
    "AudioBuffer",
    "AudioContextState",
    "Gamepad",
    "GamepadEvent",
    "GamepadButton",
    "Navigator",
]

[dependencies]
romy-core = "0.1.0"
wasm-bindgen = "0.2.42"
js-sys = "0.3.19"
serde = "1.0.85"
serde_derive = "1.0.85"