[package]
name = "romy"
version = "0.1.1"
authors = ["catt-io <catt-io@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
documentation = "https://github.com/catt-io/romy"
repository = "https://github.com/catt-io/romy"
homepage = "http://www.romy.xyz"
description = """
A runtime for portable, archivable and deterministic video games.
"""
categories = ["games"]
keywords = ["game", "runtime"]

[features]
default = ["romy-engine"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = "2.32.0"
romy-sdl = { version = "0.1.1" }
romy-wasmer = { version = "0.1.0" }

[dependencies]
romy-core = "0.1.0"
romy-engine = { version = "0.1.0", optional = true}
byteorder = "1.2.7"
lazy_static = "1.2.0"
mut_static = "5.0.0"
serde = "1.0.85"
serde_derive = "1.0.85"
bincode = "1.0.1"